--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     
         <div class="action-buttons">
     <a 
-      href="Yousif Munir Butrus CV1.pdf" 
+      href="Yousif Munir Butrus CV2.pdf" 
       class="action-button" 
       aria-label="Download my CV" 
       download 
@@ -315,15 +315,19 @@
     >
       Download CV
     </a>
-    <a 
-      href="https://yousifmunir1.github.io/last-version-of-website/" 
-      class="action-button" 
-      aria-label="Check my work" 
-      rel="noopener noreferrer" 
-      target="_blank"
-    >
-      Check My Work
-    </a>
+    
+<a 
+  href="projects.html" 
+  class="action-button" 
+  aria-label="Check my work" 
+  rel="noopener noreferrer" 
+  target="_blank"
+>
+  Check My Work
+</a>
+
+
+
   </div>
       </div>
     </section>
